# handwritten-notes-transcriber

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/image/: image_handler.py
app/ocr/: ocr_handler.py
docs/: project_description.md
