[project]
name = "handwritten-notes-transcriber"
version = "0.1.0"
description = ""
authors = [
    {name = "Borja MPM",email = "bmarquezdelaplata@uc.cl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "paddleocr (>=2.10.0,<3.0.0)",
    "paddlepaddle (>=3.0.0,<4.0.0)",
    "setuptools (>=80.7.1,<81.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
